[package]
name = "ekubo_sdk"
version = "0.0.1"
authors = ["Mahmoud Salem <moody@ekubo.org>"]
edition = "2021"
license = "LGPL-2.1"
description = "Types for interacting with Ekubo Protocol on Starknet & EVM chains"
homepage = "https://ekubo.org"
repository = "https://github.com/EkuboProtocol/rust-sdk"
readme = "README.md"
keywords = ["crypto", "math", "ekubo", "protocol", "defi"]

[dependencies]
derive_more = { version = "2.0.1", features = ["add", "add_assign", "from"] }
num-traits = "0.2.19"
ruint = "1.17.0"
thiserror = "2.0.17"

# serde
serde = { version = "1.0", features = ["derive"], optional = true }

# starknet
starknet-types-core = { version = "1.0.0", optional = true, default-features = false }

# evm
alloy-primitives = { version = "1.4.1", optional = true, default-features = false }

[features]
serde = ["dep:serde", "alloy-primitives?/serde", "starknet-types-core?/serde", "ruint/serde"]

starknet = ["starknet-types-core"]
evm = ["alloy-primitives"]
