[package]
name = "ekubo_sdk"
version = "1.0.0"
authors = ["Mahmoud Salem <moody@ekubo.org>"]
edition = "2021"
license = "LGPL-2.1"
description = "Types for interacting with Ekubo Protocol on Starknet & EVM chains"
homepage = "https://ekubo.org"
repository = "https://github.com/EkuboProtocol/rust-sdk"
readme = "README.md"
keywords = ["crypto", "math", "ekubo", "protocol", "defi", "no_std"]

[dependencies]
alloy-primitives = { version = "1", optional = true, default-features = false }
derive_more = { version = "2", features = ["add", "add_assign", "from"], default-features = false }
libm = { version = "0.2", default-features = false, optional = true }
num-traits = { version = "0.2.4", features = ["i128"], default-features = false }
ruint = { version = "1.14.0", default-features = false }
serde = { version = "1", features = ["derive"], optional = true, default-features = false }
starknet-types-core = { version = "1", optional = true, default-features = false }
thiserror = { version = "2", default-features = false }

[features]
default = ["std"]
std = [
    "alloy-primitives?/std",
    "derive_more/std",
    "num-traits/std",
    "ruint/std",
    "thiserror/std",
    "serde?/std",
    "starknet-types-core?/std",
]
no_std = ["dep:libm"]
serde = [
    "dep:serde",
    "alloy-primitives?/serde",
    "starknet-types-core?/serde",
    "ruint/serde",
]
starknet = ["starknet-types-core"]
evm = ["alloy-primitives"]
