[package]
name = "ekubo_sdk"
version = "3.0.1"
authors = [
    "Mahmoud Salem <moody@ekubo.org>",
    "Die Herdplatte <die.herdplatte@gmail.com>",
]
edition = "2021"
license = "LGPL-2.1"
description = "Types for interacting with Ekubo Protocol on Starknet & EVM chains"
homepage = "https://ekubo.org"
repository = "https://github.com/EkuboProtocol/rust-sdk"
readme = "README.md"
keywords = ["crypto", "ekubo", "protocol", "defi", "no_std"]

[dependencies]
alloy-primitives-0_6 = { package = "alloy-primitives", version = "0.6", optional = true, default-features = false }
alloy-primitives-1 = { package = "alloy-primitives", version = "1", optional = true, default-features = false }
derive_more = { version = "2", features = [
    "add",
    "add_assign",
    "from",
], default-features = false }
libm = { version = "0.2", default-features = false, optional = true }
num-traits = { version = "0.2.4", features = [
    "i128",
], default-features = false }
ruint = { version = "1.14.0", default-features = false }
serde = { version = "1", features = [
    "derive",
], optional = true, default-features = false }
starknet-types-core = { version = "1", optional = true, default-features = false }
thiserror = { version = "2", default-features = false }

[features]
default = ["std"]
std = [
    "alloy-primitives-0_6?/std",
    "alloy-primitives-1?/std",
    "derive_more/std",
    "num-traits/std",
    "ruint/std",
    "thiserror/std",
    "serde?/std",
    "starknet-types-core?/std",
]
no_std = ["dep:libm"]
serde = [
    "dep:serde",
    "alloy-primitives-0_6?/serde",
    "alloy-primitives-1?/serde",
    "starknet-types-core?/serde",
    "ruint/serde",
]
starknet = ["starknet-types-core"]
evm = ["evm-alloy-1"]
evm-alloy-0_6 = ["dep:alloy-primitives-0_6"]
evm-alloy-1 = ["dep:alloy-primitives-1"]
